homelab/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: homelab
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
      namespace: homelab
    spec:
      runtimeClassName: nvidia
      containers:
      - image: nyanmisaka/jellyfin:240401-amd64
        imagePullPolicy: IfNotPresent
        name: jellyfin
        ports:
          - containerPort: 8096
            name: jellyfin
            protocol: TCP
        securityContext:
          allowPrivilegeEscalation: true
          privileged: true
        volumeMounts:
          - mountPath: /config
            name: media
            subPath: docker/jellyfin
          - mountPath: /data
            name: media
            subPath: Media/Movies
        resources:
          limits:
            nvidia.com/gpu: 1 
      restartPolicy: Always
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
