homelab/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: jellyfin
spec:
  ports:
  - name: http
    port: 8096
    protocol: TCP
    targetPort: 8096
  selector:
    app: jellyfin
  type: ClusterIP
