homelab/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: jellyfin
spec:
  ingressClassName: traefik
  rules:
  - host: jellyfin.homelab
    http:
      paths:
      - backend:
          service:
            name: jellyfin-service
            port:
              number: 8096
        path: /
      pathType: ImplementationSpecific
